driver test issues fixed